--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,10 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.movimientos {
+  border: 1px solid black;
+  width: 100%;
+  height: 300px;
+  overflow: scroll;
+}
